sli/ingestion/ingestion-base/src/test/resources/fileLevelTestData/validXML/validXML.ctl
edfi-xml,student,student.xml,b123868b9ce5647dbb09c5417b6cf852
